# RealityCheck

./: .gitignore  README.md  aiagent.py  answer.py  articles.json  combine_2.py  comprehend.ipynb  decomposition.py  get_contents.py  message.json  message.txt  mongo.ipynb  mongo_db.py  news_analysis.md  news_articles.json  news_articles.md  news_articles_raw.txt  package-lock.json  playground.ipynb  requirements.txt  search_agent.py  sentiment_from_articles.py  summarization.py  youtube_search.py
agents/: pyvenv.cfg
agents/realitycheck/: README.md  pyproject.toml
agents/realitycheck/src/realitycheck/: crew.py  main.py
agents/realitycheck/src/realitycheck/config/: agents.yaml
backend/: answer.py  combine_2.py  combined_3.py  fact_check_results.json  fact_check_results_1.json  fact_check_results_2.json  fact_check_results_3.json  fact_check_results_4.json  fact_check_results_5.json  fact_check_results_6.json  main.py  test.py
chatbot-project/: README.md
chatbot-project/backend/: requirements.txt
chatbot-project/backend/app/: main.py
chatbot-project/backend/app/api/: __init__.py  chat.py  (+1 more)
chatbot-project/frontend/: next.config.js  package.json
db/: chroma.sqlite3
embeddings-s3-bucket/embeddings/: 20250302022433_e55729dafd.json  20250302050353_fbcc3d4181.json
frontend/news-verification/: package-lock.json  package.json
frontend/news-verification/app/: layout.tsx  page.tsx
frontend/news-verification/components/: EntityCloud.tsx  FactCheckStream.tsx  analysis-results.tsx  app-sidebar.tsx  chat-input.tsx  error-boundary.tsx  news-analyzer.tsx
(+19 files in other folders)
