[project]
name = "realitycheck"
version = "0.1.0"
description = "RealityCheck using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
realitycheck = "realitycheck.main:run"
run_crew = "realitycheck.main:run"
train = "realitycheck.main:train"
replay = "realitycheck.main:replay"
test = "realitycheck.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
